WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255914
REGRESSION (Safari 16.4): Dynamically set `<meter>` doesn't show the value
https://bugs.webkit.org/show_bug.cgi?id=255914
Summary
REGRESSION (Safari 16.4): Dynamically set `<meter>` doesn't show the value
Thomas Steiner
Reported
2023-04-25 01:33:15 PDT
Created
attachment 466071
[details]
Safari 1. Go to
https://like-spiffy-pick.glitch.me/
on Safari Version 16.5 (18615.2.5.11.2) or Safari Technology Preview Release 168 (Safari 16.4, WebKit 18616.1.10.2) on macOS 13.4 Beta (22F5037d). 2. Notice how the first `<meter>`'s value isn't shown. 3. Try the same on Chrome, all three `<meter>`s' values are shown. The fix is to hide, then show the `<meter>`, or to populate the attributes statically, which may or may not be an option. This affects
https://howfuguismybrowser.dev/
.
Attachments
Safari
(247.87 KB, image/png)
2023-04-25 01:33 PDT
,
Thomas Steiner
no flags
Details
reduction
(253 bytes, text/html)
2023-04-25 12:40 PDT
,
Aditya Keerthi
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Thomas Steiner
Comment 1
2023-04-25 01:34:21 PDT
In my tests, this seems to only affect desktop Safari, it works fine on iOS.
Thomas Steiner
Comment 2
2023-04-25 01:39:32 PDT
See the screenshot for details:
https://bugs.webkit.org/attachment.cgi?id=466071
.
Anne van Kesteren
Comment 3
2023-04-25 02:37:53 PDT
Aditya, can you take a look?
Radar WebKit Bug Importer
Comment 4
2023-04-25 02:38:07 PDT
<
rdar://problem/108495001
>
Aditya Keerthi
Comment 5
2023-04-25 11:00:48 PDT
I'm unable to reproduce on
https://like-spiffy-pick.glitch.me/
, but can reproduce on
https://howfuguismybrowser.dev/
.
Aditya Keerthi
Comment 6
2023-04-25 12:40:24 PDT
Created
attachment 466080
[details]
reduction Attaching a reliable reproduction.
Aditya Keerthi
Comment 7
2023-04-25 15:49:33 PDT
Confirmed this is a regression in Safari 16.4. This also reproduces with <progress>, and is fallout from GPU Process refactoring work. We need to ensure our `ControlPart` state is up-to-date, probably in `RenderBox::ensureControlPart`.
Aditya Keerthi
Comment 8
2023-04-26 17:33:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13218
EWS
Comment 9
2023-04-27 16:57:42 PDT
Committed
263473@main
(340e63b309b7): <
https://commits.webkit.org/263473@main
> Reviewed commits have been landed. Closing PR #13218 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug