Source/WebCore/platform/graphics/controls/ProgressBarPart.h
@@ -32,10 +32,14 @@ namespace WebCore {
 
 class ProgressBarPart : public ControlPart {
 public:
+    static Ref<ProgressBarPart> create();
     WEBCORE_EXPORT static Ref<ProgressBarPart> create(double position, const Seconds& animationStartTime);
 
     double position() const { return m_position; }
+    void setPosition(double position) { m_position = position; }
+
     Seconds animationStartTime() const { return m_animationStartTime; }
+    void setAnimationStartTime(Seconds animationStartTime) { m_animationStartTime = animationStartTime; }
 
 private:
     ProgressBarPart(double position, const Seconds& animationStartTime);
